fixed bad alignment issues, clickable github + email

--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -76,6 +76,12 @@ a{
 	width: 50px;
 	height: 50px;
 }
+.contact-icon:hover{
+	transform: scale(1.1);
+}
+.contact-icon:active{
+	filter: blur(1px);
+}
 .card {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -95,7 +101,6 @@ a{
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
-	align-items: stretch;
 	border: solid var(--text-black) 2px;
 	border-radius: 10px;
 }
@@ -152,7 +157,7 @@ a{
 		width: auto;
 		border: solid var(--text-black) 2px;
 		border-radius: 10px;
-		margin: 10px;
+		margin: 10px 0px 0px 0px;
 		flex: 1;
 	}
 	#showcase-items{
